internal/gatewayapi/testdata/clienttrafficpolicy-client-ip-detection.in.yaml
clientTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: ClientTrafficPolicy
  metadata:
    namespace: envoy-gateway
    name: target-gateway-1-http-1
  spec:
    clientIPDetection:
      xForwardedFor:
        numTrustedHops: 2
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
      sectionName: http-1
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: ClientTrafficPolicy
  metadata:
    namespace: envoy-gateway
    name: target-gateway-1-http-2
  spec:
    clientIPDetection:
      customHeader:
        name: "x-client-ip-address"
        failClosed: false
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
      sectionName: http-2
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: ClientTrafficPolicy
  metadata:
    namespace: envoy-gateway
    name: target-gateway-1-http-3
  spec:
    clientIPDetection:
      customHeader:
        name: "x-client-ip-address"
        failClosed: true
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
      sectionName: http-3
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http-1
      protocol: HTTP
      port: 8081
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-2
      protocol: HTTP
      port: 8082
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-3
      protocol: HTTP
      port: 8083
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-4
      protocol: HTTP
      port: 8084
      allowedRoutes:
        namespaces:
          from: Same
